[Fix] Color Dark Mode

--- a/src/styles/scss/layouts/_breadcrumb.scss
+++ b/src/styles/scss/layouts/_breadcrumb.scss
@@ -34,7 +34,8 @@
             width: 100%;
             height: 1px;
 
-            background-color: #000;
+            background-color: $--main-txt-color;
+            background-color: var(--main-txt-color);
         }
     }
 
